# Tomoyo-Gui-Gpet

./: AUTHORS  BUGS  ChangeLog  ChangeLog.ja  INSTALL  Makefile.am  README  README.md  configure.ac  gpet.desktop  gpetrc.sample
po/: LINGUAS  POTFILES.in  ja.po
src/: Makefile.am  conf.c  conf.h  g_undef.h  gpet  gpet.c  gpet.h  interface.inc  menu.c  other.c  process.c  search.c
src/usr_sbin/: ccstools.c  ccstools.h  editpolicy.c  editpolicy.h  editpolicy_color.c  editpolicy_keyword.c  editpolicy_offline.c  editpolicy_optimizer.c
